--- a/html/index.html
+++ b/html/index.html
@@ -43,33 +43,33 @@
         <div class="singleBlog">
           <img src="../imgs/thum1.jpg" alt="">
           <div class="campContent">
-            <h3>A Chair of Million <span>Art</span></h3>
-            <p>By <a href="#">Jhon Doe</a> | <a href="#">Nov 21, 2018</a></p>
+            <h3>First Code Camp!<span>Wujal Wujal</span></h3>
+            <p>Jan 12, <a href="#">2018</a></p>
             <a href="#" class="btn" data-modal-target="#modal">Read More</a>
           </div>
         </div>
         <div class="singleBlog">
           <img src="../imgs/thum2.jpg" alt="">
           <div class="campContent">
-            <h3>A Chair of Million <span>Photography</span></h3>
-            <p>By <a href="#">Jhon Doe</a> | <a href="#">Nov 21, 2018</a></p>
-            <a href="#" class="btn">Read More</a>
+            <h3>Second Camp!<span>Wujal Wujal</span></h3>
+            <p>Nov 21, <a href="#">2018</a></p>
+            <a href="#" class="btn" data-modal-target="#modal">Read More</a>
           </div>
         </div>
         <div class="singleBlog">
           <img src="../imgs/thum3.jpg" alt="">
           <div class="campContent">
-            <h3>A Chair of Million <span>Design</span></h3>
-            <p>By <a href="#">Jhon Doe</a> | <a href="#">Nov 21, 2018</a></p>
-            <a href="#" class="btn">Read More</a>
+            <h3>Great Time Camp!<span>Alawa</span></h3>
+            <p>Feb 14, <a href="#">2019</a></p>
+            <a href="#" class="btn" data-modal-target="#modal">Read More</a>
           </div>
         </div>
         <div class="singleBlog">
           <img src="../imgs/thum4.jpg" alt="">
           <div class="campContent">
-            <h3>A Chair of Million <span>Life</span></h3>
-            <p>By <a href="#">Jhon Doe</a> | <a href="#">Nov 21, 2018</a></p>
-            <a href="#" class="btn" >Read More</a>
+            <h3>Another Camp!<span>Wujal Wujal</span></h3>
+            <p>Sep 2, <a href="#">2019</a></p>
+            <a href="#" class="btn" data-modal-target="#modal">Read More</a>
           </div>
         </div>
       </main>
