Fixed navigation jump bug.

--- a/html/index.html
+++ b/html/index.html
@@ -57,7 +57,7 @@
           <div class="campContent">
             <h3>First Code Camp!<span>Wujal Wujal</span></h3>
             <p>Jan 12, <a href="#">2018</a></p>
-            <a href="#" class="btn" data-modal-target="#modal">Read More</a>
+            <a class="btn" data-modal-target="#modal">Read More</a>
           </div>
         </div>
         <div class="singleBlog">
@@ -65,7 +65,7 @@
           <div class="campContent">
             <h3>Second Camp!<span>Wujal Wujal</span></h3>
             <p>Nov 21, <a href="#">2018</a></p>
-            <a href="#" class="btn" data-modal-target="#modal">Read More</a>
+            <a class="btn" data-modal-target="#modal">Read More</a>
           </div>
         </div>
         <div class="singleBlog">
@@ -73,7 +73,7 @@
           <div class="campContent">
             <h3>Great Time Camp!<span>Alawa</span></h3>
             <p>Feb 14, <a href="#">2019</a></p>
-            <a href="#" class="btn" data-modal-target="#modal">Read More</a>
+            <a class="btn" data-modal-target="#modal">Read More</a>
           </div>
         </div>
         <div class="singleBlog">
@@ -81,7 +81,7 @@
           <div class="campContent">
             <h3>Another Camp!<span>Wujal Wujal</span></h3>
             <p>Sep 2, <a href="#">2019</a></p>
-            <a href="#" class="btn" data-modal-target="#modal">Read More</a>
+            <a class="btn" data-modal-target="#modal">Read More</a>
           </div>
         </div>
       </main>
