Fixed Some spacing and Colours

--- a/html/index.html
+++ b/html/index.html
@@ -32,7 +32,7 @@
       </div>
       <div id="home-info">
           
-              <iframe id="home-video" src="https://www.youtube.com/embed/8ukWYBMH-zI" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+          <iframe id="home-video" src="https://www.youtube.com/embed/8ukWYBMH-zI" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
         
           <div id="home-video-info">
               <h2>Video About Us! (placeholder)</h2>
@@ -116,7 +116,7 @@
   </div>
   <h3>Testing - embedding facebook album via iframe.</h3>
   <iframe src="https://www.facebook.com/plugins/post.php?href=https%3A%2F%2Fwww.facebook.com%2Fmedia%2Fset%2F%3Fset%3Da.113138956723663%26type%3D3&width=500" width="500" height="650" style="border:none;overflow:hidden" scrolling="no" frameborder="0" allowTransparency="true" allow="encrypted-media" ></iframe>
-  <div id="overlay"></div>
+  <!--<div id="overlay"></div>-->
   <footer>
       <p> This is a temporary footer. </p>
     </footer>
