Footer and some additional Layout

--- a/html/index.html
+++ b/html/index.html
@@ -60,6 +60,7 @@
             <a class="btn" data-modal-target="#modal">Read More</a>
           </div>
         </div>
+
         <div class="singleBlog">
           <img src="../imgs/thum2.jpg" alt="">
           <div class="campContent">
@@ -68,6 +69,7 @@
             <a class="btn" data-modal-target="#modal">Read More</a>
           </div>
         </div>
+
         <div class="singleBlog">
           <img src="../imgs/thum3.jpg" alt="">
           <div class="campContent">
@@ -76,6 +78,7 @@
             <a class="btn" data-modal-target="#modal">Read More</a>
           </div>
         </div>
+
         <div class="singleBlog">
           <img src="../imgs/thum4.jpg" alt="">
           <div class="campContent">
@@ -84,6 +87,10 @@
             <a class="btn" data-modal-target="#modal">Read More</a>
           </div>
         </div>
+
+
+
+
       </main>
 
       <a href="#" class="btnViewAll">View All</a>
@@ -114,11 +121,20 @@
     </div>
     <div class="mask"></div>
   </div>
-  <h3>Testing - embedding facebook album via iframe.</h3>
-  <iframe src="https://www.facebook.com/plugins/post.php?href=https%3A%2F%2Fwww.facebook.com%2Fmedia%2Fset%2F%3Fset%3Da.113138956723663%26type%3D3&width=500" width="500" height="650" style="border:none;overflow:hidden" scrolling="no" frameborder="0" allowTransparency="true" allow="encrypted-media" ></iframe>
-  <!--<div id="overlay"></div>-->
+  <div id="fbList">
+    <h3>Featured Albums on Facebook</h3>
+    <div id="fbAlbumGallery">
+        <iframe src="https://www.facebook.com/plugins/post.php?href=https%3A%2F%2Fwww.facebook.com%2Fmedia%2Fset%2F%3Fset%3Da.113134773390748%26type%3D3&width=350&show_text=true&height=520&appId" width="350" height="520" style="border:none;overflow:hidden" scrolling="no" frameborder="0" allowTransparency="true" allow="encrypted-media"></iframe>
+      <iframe src="https://www.facebook.com/plugins/post.php?href=https%3A%2F%2Fwww.facebook.com%2Fmedia%2Fset%2F%3Fset%3Da.113138956723663%26type%3D3&width=350&show_text=true&height=520&appId" width="350" height="520" style="border:none;overflow:hidden" scrolling="no" frameborder="0" allowTransparency="true" allow="encrypted-media"></iframe>
+      <iframe src="https://www.facebook.com/plugins/post.php?href=https%3A%2F%2Fwww.facebook.com%2Fmedia%2Fset%2F%3Fset%3Da.113134773390748%26type%3D3&width=350&show_text=true&height=520&appId" width="350" height="520" style="border:none;overflow:hidden" scrolling="no" frameborder="0" allowTransparency="true" allow="encrypted-media"></iframe>
+    </div><!-- End fbAlbumGallery -->
+  </div><!-- End fbList -->
+
   <footer>
-      <p> This is a temporary footer. </p>
-    </footer>
+    <div id="fbFooter">
+      <iframe src="https://www.facebook.com/plugins/page.php?href=https%3A%2F%2Fwww.facebook.com%2FTest-for-Uni-113133820057510%2F&tabs&width=400&height=70&small_header=true&adapt_container_width=true&hide_cover=false&show_facepile=true&appId" width="400" height="72" style="border:none;overflow:hidden" scrolling="no" frameborder="0" allowTransparency="true" allow="encrypted-media"></iframe>
+      <p> Some more information </br> to do with help </br> or contact </br> or website developers... </p>
+    </div>  
+  </footer>
 </body>
 </html>
