--- a/html/index.html
+++ b/html/index.html
@@ -11,6 +11,7 @@
   <script src="../js/lightbox-plus-jquery.min.js"></script>
   <script defer src="../js/modal.js"></script>
   <script src="../js/gallery.js"></script>
+  <script src="../js/script.js"></script>
 </head >
 <body>
 
@@ -20,7 +21,12 @@
         <a href="#home">Home</a>
         <a href="#camps">Recent Camps</a>
         <a href="#challenges">Challenges</a>
-    </div>   
+    </div> 
+    
+    <div class="warning" id="warning">
+      <p><b>Warning:</b> Aboriginal and Torres Strait Islander viewers are warned that this site may contain images and voices of deceased persons.</p>
+      <a onclick="closeWarning()">x</a>
+    </div>
 
     <!-- Home / Main -->
     <div class="hero-image" id="home">       
