Added fontawesome + animation

--- a/html/index.html
+++ b/html/index.html
@@ -5,13 +5,14 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
   <title>Coding on Country</title>
+  <link rel="stylesheet" href="../css/all.min.css">
   <link rel="stylesheet" href="../css/style.css">
   <link rel="stylesheet" href="../css/modal.css">
   <link rel="stylesheet" href="../css/lightbox.min.css">
-  <script src="../js/lightbox-plus-jquery.min.js"></script>
-  <script defer src="../js/modal.js"></script>
-  <script src="../js/gallery.js"></script>
-  <script src="../js/script.js"></script>
+  <script src="../js/lightbox-plus-jquery.min.js" defer></script>
+  <!-- <script defer src="../js/modal.js"></script> -->
+  <script src="../js/gallery.js" defer></script>
+  <script src="../js/script.js" defer></script>
 </head >
 <body>
 
@@ -23,9 +24,9 @@
         <a href="#challenges">Challenges</a>
     </div> 
     
-    <div class="warning" id="warning">
+    <div class="warning">
       <p><b>Warning:</b> Aboriginal and Torres Strait Islander viewers are warned that this site may contain images and voices of deceased persons.</p>
-      <a onclick="closeWarning()">x</a>
+      <a class="warning_close"><i class="fas fa-times"></i></a>
     </div>
 
     <!-- Home / Main -->
