--- a/Frontend/html/index.html
+++ b/Frontend/html/index.html
@@ -60,41 +60,54 @@
       
       <!-- Section for Gallery List / Recent Events List-->
       <div id="blogContainer">
+
+
         <div class="singleBlog">
-          <img src="../imgs/thum1.jpg" alt="">
           <div class="campContent">
-            <h3>First Code Camp!<span>Wujal Wujal</span></h3>
-            <p>Jan 12, <a href="#">2018</a></p>
-            <a href="#campGallery" class="btn" onclick="selectGallery()">Read More</a>
+            <div class = "blogHead">
+              <h3>Camp Name</h3>
+              <h4>Wujal Wujal</h4>
+              <p class="blogDate">Jan 12, <a href="#"></a>2018</a></p>
+            </div>
+            <p class="blogText">Sample Camp Description of what went on etc etc, blah blah blah</p>
+            <a href="#campGallery" class="btn blogLink">View Gallery</a>
           </div>
         </div>
 
-        <div class="singleBlog">
-          <img src="../imgs/thum2.jpg" alt="">
-          <div class="campContent">
-            <h3>Second Camp!<span>Wujal Wujal</span></h3>
-            <p>Nov 21, <a href="#">2018</a></p>
-            <a href="#campGallery" class="btn" onclick="selectGallery()">Read More</a>
-          </div>
-        </div>
 
         <div class="singleBlog">
-          <img src="../imgs/thum3.jpg" alt="">
-          <div class="campContent">
-            <h3>Great Time Camp!<span>Alawa</span></h3>
-            <p>Feb 14, <a href="#">2019</a></p>
-            <a href="#campGallery" class="btn" onclick="selectGallery()">Read More</a>
-          </div>
-        </div>
+            <div class="campContent">
 
-        <div class="singleBlog">
-          <img src="../imgs/thum4.jpg" alt="">
-          <div class="campContent">
-            <h3>Another Camp!<span>Wujal Wujal</span></h3>
-            <p>Sep 2, <a href="#">2019</a></p>
-            <a href="#campGallery" class="btn" onclick="selectGallery()">Read More</a>
+              <div class="albumPreview">
+                  <iframe src="https://www.facebook.com/plugins/post.php?href=https%3A%2F%2Fwww.facebook.com%2Fmedia%2Fset%2F%3Fset%3Da.113134773390748%26type%3D3&width=350&show_text=true&height=520&appId" width="350" height="520" style="border:none;overflow:hidden" scrolling="no" frameborder="0" allowTransparency="true" allow="encrypted-media" class="fbFrame frameSample"></iframe>
+              </div>
+
+              <div class = "blogHead headSecond">
+                <h3>Camp Name</h3>
+                <h4>Wujal Wujal</h4>
+                <p class="blogDate">Jan 12, <a href="#"></a>2018</a></p>
+              </div>
+              <a href="#campGallery" class="btn blogLink">View Gallery</a>
+            </div>
           </div>
-        </div>
+
+
+          <div class="singleBlog">
+              <div class="campContent campThird">
+  
+                <div class="albumThird">
+                    <iframe src="https://www.facebook.com/plugins/post.php?href=https%3A%2F%2Fwww.facebook.com%2Fmedia%2Fset%2F%3Fset%3Da.113134773390748%26type%3D3&width=350&show_text=true&height=520&appId" width="350" height="520" style="border:none;overflow:hidden" scrolling="no" frameborder="0" allowTransparency="true" allow="encrypted-media" class="fbFrame frameThird"></iframe>
+                </div>
+  
+                <div class = "blogHead headThird">
+                  <h3>Camp Name</h3>
+                  <h4>Wujal Wujal</h4>
+                  <p class="blogDate">Jan 12, <a href="#"></a>2018</a></p>
+                </div>
+                <a href="#campGallery" class="linkThird">View Gallery</a>
+              </div>
+            </div>
+
 
       </div><!-- End blogContainer -->
 
@@ -126,14 +139,6 @@
 
 
 
-  <div id="fbList">
-    <h3>Featured Albums on Facebook</h3>
-    <div id="fbAlbumGallery">
-        <iframe src="https://www.facebook.com/plugins/post.php?href=https%3A%2F%2Fwww.facebook.com%2Fmedia%2Fset%2F%3Fset%3Da.113134773390748%26type%3D3&width=350&show_text=true&height=520&appId" width="350" height="520" style="border:none;overflow:hidden" scrolling="no" frameborder="0" allowTransparency="true" allow="encrypted-media" class="fbFrame"></iframe>
-      <iframe src="https://www.facebook.com/plugins/post.php?href=https%3A%2F%2Fwww.facebook.com%2Fmedia%2Fset%2F%3Fset%3Da.113138956723663%26type%3D3&width=350&show_text=true&height=520&appId" width="350" height="520" style="border:none;overflow:hidden" scrolling="no" frameborder="0" allowTransparency="true" allow="encrypted-media" class="fbFrame"></iframe>
-      <iframe src="https://www.facebook.com/plugins/post.php?href=https%3A%2F%2Fwww.facebook.com%2Fmedia%2Fset%2F%3Fset%3Da.113134773390748%26type%3D3&width=350&show_text=true&height=520&appId" width="350" height="520" style="border:none;overflow:hidden" scrolling="no" frameborder="0" allowTransparency="true" allow="encrypted-media" class="fbFrame"></iframe>
-    </div><!-- End fbAlbumGallery -->
-  </div><!-- End fbList -->
 
   <footer>
     <div id="fbFooter">
